# BlogBot

./: .gitignore  README.md  app.py  graph.py  pyproject.toml  requirements.txt  test.py
notebooks/: nb.ipynb
